force-app/main/default/objects/User/fields/Contrasenia_App__c.field-meta.xml
<CustomField>
    <fullName>Contrasenia_App__c</fullName>
    <label>Contrasenia App</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>