force-app/main/default/objects/User/fields/Dan360_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Equipo__c</fullName>
    <description>Equipo al que pertenece el APM</description>
    <label>Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipo</valueSetName>
    </valueSet>
</CustomField>