force-app/main/default/objects/User/fields/Dan360_SalesDistrict__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistrict__c</fullName>
    <description>Determinará las cuentas a las cuales el usuario tendrá acceso.</description>
    <label>Sales district</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_SalesDistrict</valueSetName>
    </valueSet>
</CustomField>