force-app/main/default/objects/User/fields/Dan360_UnidadDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadDeNegocio__c</fullName>
    <description>Unidad de negocio para la cual los usuarios podrán cargar pedidos.</description>
    <label>Unidad de negocio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_UnidadDeNegocio</valueSetName>
    </valueSet>
</CustomField>