force-app/main/default/objects/User/fields/Funcion__c.field-meta.xml
<CustomField>
    <fullName>Funcion__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funcion</label>
    <type>Text</type>
</CustomField>