force-app/main/default/objects/User/fields/herencia__c.field-meta.xml
<CustomField>
    <fullName>herencia__c</fullName>
    <label>Herencia</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>