force-app/main/default/objects/User/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <label>Matricula</label>
    <type>TextArea</type>
</CustomField>