force-app/main/default/objects/User/fields/Segmenta_Por__c.field-meta.xml
<CustomField>
    <fullName>Segmenta_Por__c</fullName>
    <label>Segmenta Por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Epilepsia</fullName>
            </value>
            <value>
                <fullName>Metabolicos y Epilepsia</fullName>
            </value>
            <value>
                <fullName>Pediatricos</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>