force-app/main/default/objects/User/fields/Sub_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Sub_Equipo__c</fullName>
    <label>Sub Equipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Equipo</valueSetName>
    </valueSet>
</CustomField>