force-app/main/default/objects/User/fields/VisMed_ContrasenaApp__c.field-meta.xml
<CustomField>
    <fullName>VisMed_ContrasenaApp__c</fullName>
    <label>Contraseña App</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>