force-app/main/default/objects/User/fields/VisMed_Es_un_Visitador_Medico__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Es_un_Visitador_Medico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field booleano para indicar si el usuario pertenece a la familia de visitadores y saber si debe contar en las querys.</description>
    <label>Es un Visitador Medico</label>
    <type>Checkbox</type>
</CustomField>