force-app/main/default/objects/User/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZONA NORTE</fullName>
            </value>
            <value>
                <fullName>CABA SUR</fullName>
            </value>
            <value>
                <fullName>CABA NORTE</fullName>
            </value>
            <value>
                <fullName>ZONA SUR</fullName>
            </value>
            <value>
                <fullName>CABA CENTRO</fullName>
            </value>
            <value>
                <fullName>ZONA NOROESTE</fullName>
            </value>
            <value>
                <fullName>ZONA SUDESTE</fullName>
            </value>
            <value>
                <fullName>CABA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>